tests/spec/emit/snapshots/pattern_unicode_escape_conversion.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn test(s: string) -> int {
    match s {
      "\u{00E9}" => 1,
      _ => 0,
    }
  }
---
package main

func test(s string) int {
	if s == "\u00E9" {
		return 1
	}
	return 0
}
