tests/spec/emit/snapshots/pipeline_with_builtin_slice_length.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> int {
    let items = [1, 2, 3];
    items |> Slice.length()
  }
---
package main

func test() int {
	items := []int{1, 2, 3}
	return len(items)
}
