tests/spec/emit/snapshots/pointer_backed_newtype_emits_no_stringer.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Handle(Ref<int>)
---
package main

type Handle *int
