tests/spec/emit/snapshots/pointer_deref_target_frozen_before_rhs.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn run() -> Result<(), string> {
    let mut a = 10
    let mut b = 20
    let mut p = &a
    let bump = || -> Result<int, string> {
      p = &b
      Ok(5)
    }
    p.* = bump()?
    Ok(())
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func run() lisette.Result[struct{}, string] {
	a := 10
	b := 20
	p := &a
	bump := func() lisette.Result[int, string] {
		p = &b
		return lisette.MakeResultOk[int, string](5)
	}
	ref := p
	check := bump()
	if check.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[struct{}, string](check.ErrVal)
	}
	*ref = check.OkVal
	return lisette.MakeResultOk[struct{}, string](struct{}{})
}
